objects/ccpt__Support__c.object
<CustomObject>
    <fields>
        <fullName>ccpt__Company__c</fullName>
        <label>Company</label>
        <length>150</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ccpt__Email__c</fullName>
        <label>Email</label>
        <required>true</required>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>ccpt__Name__c</fullName>
        <label>Name</label>
        <length>75</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ccpt__Phone_Number__c</fullName>
        <label>Phone Number</label>
        <required>true</required>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>ccpt__Support_I_Need_To__c</fullName>
        <label>I Need To...</label>
        <picklist>
            <picklistValues>
                <fullName>Report a Bug / Issue</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ask a Question about Product Functionality</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ask a Sales Question</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ask a Billing Question</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Suggest a New Feature</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Support (Deprecated)</label>
    <nameField>
        <displayFormat>ST-{0000000}</displayFormat>
        <label>Support Ticket Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Support (Deprecated)</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>